--- a/templates/hello/world.html.twig
+++ b/templates/hello/world.html.twig
@@ -1,10 +1,13 @@
 {# templates/hello/world.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ name }}!{% endblock %}
+{% block title %}Hello {{ name|capitalize }}!{% endblock %}
 {% block body %}
-    <h1>Hello {{ name }}!</h1>
+    <h1>Hello {{ name|capitalize }}!</h1>
     {% for n in 1..10 %}
-        <p>Hello {{ name }}! ({{ n }})</p>
+        <p class="{{ name }}-{{ n }}-p-color">
+            <style>.{{ name }}-{{ n }}-p-color{color:{{ cycle(['red', 'green'], loop.index0) }}}</style>
+            Hello {{ name|capitalize }}! ({{ n|format_number({format_width: 2}) }})
+        </p>
     {% endfor %}
 {% endblock %}
