--- a/templates/hello/many_times.html.twig
+++ b/templates/hello/many_times.html.twig
@@ -1,10 +1,10 @@
-{# templates/hello/world.html.twig #}
+{# templates/hello/many_times.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ name|capitalize }}!{% endblock %}
+{% block title %}Hello many_times!{% endblock %}
 {% block body %}
-    <h1>Hello {{ name|capitalize }}!</h1>
-    {% for n in 1..10 %}
+    <h1>Hello many_times {{ times }}!</h1>
+    {% for n in 1..times %}
         <div style="color: {{ cycle(['red', 'green'], loop.index0) }}">
             Hello {{ name|capitalize }}! ({{ n|format_number({format_width: 2}) }})
         </div>
