--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -3,18 +3,8 @@
 {% block title %}Hello HelloController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ '/working/coud0011/symfony-contacts/src/Controller/HelloController.php'|file_link(0) }}">src/Controller/HelloController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/working/coud0011/symfony-contacts/templates/hello/index.html.twig'|file_link(0) }}">templates/hello/index.html.twig</a></code></li>
+        <li><a href="{{ path('app_hello_manytimes', {name: 'Joe', times: 5}) }}">Joe</a></li>
+        <li><a href="{{ url('app_hello_manytimes', {name: 'Bob', times: 8}) }}">Bob</a></li>
     </ul>
-</div>
 {% endblock %}
