--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Liste des contacts{% endblock %}
 
 {% block body %}
-    <h1>Liste de tous les contacts de l'application !</h1>
+    <h1>Liste des contacts</h1>
     <ul>
         {% for contact in contacts %}
             <li>{{ contact.firstname }} {{ contact.lastname }} : {{ contact.email }}</li>
