--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des contacts</h1>
     <ul>
         {% for contact in contacts %}
-            <li><a href="{{ path('app_contact_id', {id: contact.id })}}">{{ contact.firstname }} {{ contact.lastname }} : {{ contact.email }}</a></li>
+            <li><a href="{{ path('app_contact_id', {id: contact.id })}}">{{ contact.lastname }}, {{ contact.firstname }}</a> : {{ contact.email }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
