--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,8 +43,8 @@
                             <a class="nav-link disabled">Disabled</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Rechercher">
+                    <form class="d-flex" role="search" action="{{ path('app_contact') }}">
+                        <input class="form-control me-2" type="search" placeholder="{{ search }}" aria-label="Rechercher" name="search">
                         <button class="btn btn-outline-success" type="submit">Rechercher</button>
                     </form>
                 </div>
