--- a/templates/contact/show.html.twig
+++ b/templates/contact/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '/contact/base.html.twig' %}
 
 {% block title %}
 {{ contact.firstname }} {{ contact.lastname }}
