Migration + phone in contact

--- a/templates/contact/show.html.twig
+++ b/templates/contact/show.html.twig
@@ -13,5 +13,7 @@
         <dd>{{ contact.lastname }}</dd>
         <dt><h3>Email</h3></dt>
         <dd>{{ contact.email }}</dd>
+        <dt><h3>Phone Number</h3></dt>
+        <dd>{{ contact.phone }}</dd>
     </dl>
 {% endblock %}
