--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des contacts</h1>
     <ul>
         {% for contact in contacts %}
-            <li class="contacts"><a href="{{ path('app_contact_id', {id: contact.id })}}"><span class="lastname">{{ contact.lastname }}</span>, <span class="firstname">{{ contact.firstname }}</span></a> : {{ contact.email }}</li>
+            <li class="contacts"><a href="{{ path('app_contact_id', {id: contact.id })}}"><span class="lastname">{{ contact.lastname }}</span>, <span class="firstname">{{ contact.firstname }}</span></a> : {{ contact.email }}, {{ contact.phone }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
