--- a/templates/hello/world.html.twig
+++ b/templates/hello/world.html.twig
@@ -1,5 +1,5 @@
 {# templates/hello/world.html.twig #}
-{% extends 'base.html.twig' %}
+{% extends '_contacts.html.twig' %}
 
 {% block title %}Hello {{ name|capitalize }}!{% endblock %}
 {% block body %}
