--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,12 +1,8 @@
-{% extends '/contact/base.html.twig' %}
+{% extends 'Nav_base.html.twig' %}
 
 {% block title %}Liste des contacts{% endblock %}
 
 {% block body %}
     <h1>Liste des contacts</h1>
-    <ul>
-        {% for contact in contacts %}
-            <li class="contacts"><a href="{{ path('app_contact_id', {id: contact.id })}}"><span class="lastname">{{ contact.lastname }}</span>, <span class="firstname">{{ contact.firstname }}</span></a> : {{ contact.email }}, {{ contact.phone }}</li>
-        {% endfor %}
-    </ul>
+    {{ include('contact/_contacts.html.twig', {contacts: contacts}) }}
 {% endblock %}
