--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello HelloController!{% endblock %}
 
 {% block body %}
+    <h1>Hello HelloController!</h1>
     <ul>
         <li><a href="{{ path('app_hello_manytimes', {name: 'joe', times: 5}) }}">Joe</a></li>
         <li><a href="{{ url('app_hello_manytimes', {name: 'bob', times: 8}) }}">Bob</a></li>
