--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <h1>Liste des catégories</h1>
     <ul>
-        {% for category in categories %}
-            <li class="categories"><a href="{{ path('app_category_id', {id: category.id })}}"><span class="firstname">{{ category.name }}</span></a></li>
+        {% for key, line in categories %}
+            <li class="categories"><a href="{%  set category_id ={id : line['category'].id} %}{{ path('app_category_id', category_id)}}">{{ line['category'].name }}</a>  <span class="badge bg-secondary">{{ line['count'] }}</span></li>
         {% endfor %}
     </ul>
 {% endblock %}
