--- a/templates/contact/show.html.twig
+++ b/templates/contact/show.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>{{ contact.firstname }} {{ contact.lastname }}</h1>
     <dl>
-        <dt><h3>FistName</h3></dt>
+        <dt><h3>FirstName</h3></dt>
         <dd>{{ contact.firstname }}</dd>
         <dt><h3>LastName</h3></dt>
         <dd>{{ contact.lastname }}</dd>
