--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h1>{{ category.name }}</h1>
-    {{ include('contact/_contacts.html.twig', {contacts: category.contacts}) }}
+    {{ include('contact/_contacts.html.twig', {contacts: category.contacts, show_category: false}) }}
 {% endblock %}
 
 
