--- a/templates/contact/update.html.twig
+++ b/templates/contact/update.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>Édition de {{ contact.lastname }},{{ contact.firstname }}</h1>
+    <h1>Édition de {{ contact.firstname }} {{ contact.lastname|upper }}</h1>
+    {{ form_start(form, {'attr': {'class': 'w-auto p-3 container-lg'}}) }}
+    {{ form_widget(form) }}
+    <input type="submit" class="w-auto p-3" value="Modifier">
+    {{ form_end(form) }}
 {% endblock %}
 
 {% block title %}
