--- a/templates/contact/create.html.twig
+++ b/templates/contact/create.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>Création d'un nouveau contact</h1>
+    <h1>Création d'un nouveau contact</h1>
+    {{ form_start(form, {'attr': {'class': 'w-auto p-3 container-lg'}}) }}
+    {{ form_widget(form) }}
+    <input type="submit" class="w-auto p-3 btn btn-primary btn-lg btn-block" value="Créer">
+    {{ form_end(form) }}
 {% endblock %}
 
 {% block title %}
