--- a/templates/contact/update.html.twig
+++ b/templates/contact/update.html.twig
@@ -1,14 +1,2 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-    <h1>Édition de {{ contact.firstname }} {{ contact.lastname|upper }}</h1>
-    {{ form_start(form, {'attr': {'class': 'w-auto p-3 container-lg'}}) }}
-    {{ form_widget(form) }}
-    <input type="submit" class="w-auto p-3 btn btn-primary btn-lg btn-block" value="Modifier">
-    {{ form_end(form) }}
-{% endblock %}
-
-{% block title %}
-    Édition de {{ contact.lastname }},{{ contact.firstname }}
-{% endblock %}
+{{ include('contact/_form.html.twig', {submit_label:'Sauvegarder', form: form},  with_context = false) }}
 
