--- a/templates/contact/_contacts.html.twig
+++ b/templates/contact/_contacts.html.twig
@@ -1,9 +1,13 @@
 <ul>
     {% for contact in contacts %}
             <li class="contacts">
+                <a href="{{ path('app_contact_update', {'id': contact.id}) }}"><span class="material-symbols-outlined text-warning">edit</span></a>
+                <a href="{{ path('app_contact_delete', {'id': contact.id}) }}"><span class="material-symbols-outlined text-danger">delete</span></a>
                 <a href="{{ path('app_contact_id', {id: contact.id })}}">
-                    <span class="lastname">{{ contact.lastname }}</span>,
-                    <span class="firstname">{{ contact.firstname }}</span>
+                    <span class="badge bg-primary">
+                        <span class="lastname">{{ contact.lastname }}</span>,
+                        <span class="firstname">{{ contact.firstname }}</span>
+                    </span>
                 </a>
                 {% if show_category??true %}
                 <a href="{{ contact.category is null?'':path('app_category_id', { 'id': contact.category.id}) }}">
