--- a/templates/contact/update.html.twig
+++ b/templates/contact/update.html.twig
@@ -1,2 +1,2 @@
-{{ include('contact/_form.html.twig', {submit_label:'Sauvegarder', form: form},  with_context = false) }}
+{{ include('contact/_form.html.twig', {submit_label:'Sauvegarder', form: form, contact: contact},  with_context = false) }}
 
