--- a/templates/contact/_contacts.html.twig
+++ b/templates/contact/_contacts.html.twig
@@ -1,8 +1,10 @@
 <ul>
     {% for contact in contacts %}
             <li class="contacts">
-                <a href="{{ path('app_contact_update', {'id': contact.id}) }}"><span class="material-symbols-outlined text-warning">edit</span></a>
-                <a href="{{ path('app_contact_delete', {'id': contact.id}) }}"><span class="material-symbols-outlined text-danger">delete</span></a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('app_contact_update', {'id': contact.id}) }}"><span class="material-symbols-outlined text-warning">edit</span></a>
+                    <a href="{{ path('app_contact_delete', {'id': contact.id}) }}"><span class="material-symbols-outlined text-danger">delete</span></a>
+                {% endif %}
                 <a href="{{ path('app_contact_id', {id: contact.id })}}">
                     <span class="badge bg-primary">
                         <span class="lastname">{{ contact.lastname }}</span>,
