--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item Authentication">
-                    {{ is_granted('IS_AUTHENTICATED_REMEMBERED')?'<a class="nav-link btn btn-secondary" href="/logout">#{app.user.username} voulez-vous vous déconnecter?</a>':'<a class="nav-link btn btn-secondary" href="/login">Connexion</a>' }}
+                    {{ is_granted('IS_AUTHENTICATED_REMEMBERED')?'<a class="nav-link btn btn-secondary" href="/logout">app.user.username voulez-vous vous déconnecter?</a>':'<a class="nav-link btn btn-secondary" href="/login">Connexion</a>' }}
                 </li>
                 <li class="nav-item Categories">
                     <a class="nav-link Category" href="{{ path('app_category') }}">Categories</a>
