Configuration du « CRUD » de « User » et Un peu de Style + ajout d'une favicon

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des catégories</h1>
     <ul>
         {% for key, line in categories %}
-            <li class="categories"><a href="{%  set category_id ={id : line['category'].id} %}{{ path('app_category_id', category_id)}}">{{ line['category'].name }}</a>  <span class="badge bg-secondary">{{ line['count'] }}</span></li>
+            <li class="categories"><span class="badge bg-primary"><a href="{%  set category_id ={id : line['category'].id} %}{{ path('app_category_id', category_id)}}">{{ line['category'].name }}</a>  <span class="badge bg-secondary">{{ line['count'] }}</span></span></li>
         {% endfor %}
     </ul>
 {% endblock %}
