--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -28,7 +29,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item Authentication">
-                    {{ is_granted('IS_AUTHENTICATED_REMEMBERED')?'<a class="nav-link btn btn-secondary" href="/logout">app.user.username voulez-vous vous déconnecter?</a>':'<a class="nav-link btn btn-secondary" href="/login">Connexion</a>' }}
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        <a class="nav-link btn btn-secondary" href="/logout">{{ app.user.firstname }}, voulez-vous vous déconnecter?</a>
+                    {% else %}
+                        <a class="nav-link btn btn-secondary" href="/login">Connexion</a>
+                    {% endif %}
                 </li>
                 <li class="nav-item Categories">
                     <a class="nav-link Category" href="{{ path('app_category') }}">Categories</a>
